--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "description": "",
   "homepage": "https://github.com/jewetnitg/framework",
+  "engines": {
+    "node": ">=4.2.2"
+  },
   "author": {
     "name": "Rik Hoffbauer",
     "email": "Rikhoffbauer@gmail.com",
@@ -11,12 +14,13 @@
   "files": [
     "generators"
   ],
-  "main": "generators/index.js",
+  "main": "generators/app/index.js",
   "keywords": [
     "yeoman-generator"
   ],
   "dependencies": {
     "chalk": "^1.0.0",
+    "ejs": "^2.3.4",
     "lodash": "^3.10.1",
     "yeoman-generator": "^0.21.1",
     "yosay": "^1.0.2"
