--- a/generators/app/templates/app/package.json
+++ b/generators/app/templates/app/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "babel-polyfill": "^6.3.14",
     "frntnd-framework": "^0.0.4",
+    "babel-preset-es2015": "^6.3.13",
     "jquery": "2.1.4",
     "lodash": "^3.10.1",
     "riot": "^2.3.11",
