--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
     "yeoman-generator"
   ],
   "dependencies": {
+    "babel": "^6.3.13",
+    "babel-core": "^6.3.15",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-register": "^6.3.13",
     "chalk": "^1.0.0",
     "ejs": "^2.3.4",
     "lodash": "^3.10.1",
+    "require-dir": "^0.3.0",
     "yeoman-generator": "^0.21.1",
     "yosay": "^1.0.2"
   },
