--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-register": "^6.3.13",
     "chalk": "^1.0.0",
     "ejs": "^2.3.4",
+    "glob": "^6.0.1",
     "lodash": "^3.10.1",
     "require-dir": "^0.3.0",
     "yeoman-generator": "^0.21.1",
