- fixes, improvements and propagated the changes in the framework spec to the generator - added a transform method to the generator config spec, this is called after all prompts are done, the answers can be transformed here - also allow the src path in the writing config to be a template

--- a/generators/app/templates/app/package.json
+++ b/generators/app/templates/app/package.json
@@ -41,6 +41,7 @@
     "gulp-gzip": "^1.2.0",
     "gulp-if": "^1.2.5",
     "gulp-jsdoc": "^0.1.4",
+    "gulp-less": "^3.0.5",
     "gulp-load-plugins": "^0.10.0",
     "gulp-rimraf": "^0.1.1",
     "gulp-shell": "^0.4.2",
@@ -70,6 +71,7 @@
     "karma-sinon": "^1.0.4",
     "karma-sinon-chai": "^1.1.0",
     "karma-spec-reporter": "0.0.19",
+    "minifyify": "^7.1.0",
     "mocha": "^2.2.5",
     "npm": "^3.3.8",
     "phantomjs": "^1.9.17",
